syntax="proto3";

package proto;
option go_package="./;proto";

import "mom_common.proto";

message MaterialCategoryInfo{
    string id=1;
    //代号
    string code=2;
    //描述
    string description=3;
    //备注
    string remark=4;
}

message QueryMaterialCategoryRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
    // @inject_tag: uri:"identifier" form:"identifier"
    string identifier=4;
}

message QueryMaterialCategoryResponse{
    Code code=1;
    string message=2;
    repeated MaterialCategoryInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllMaterialCategoryResponse{
    Code code=1;
    string message=2;
    repeated MaterialCategoryInfo data=3;
}

message GetMaterialCategoryDetailResponse{
    Code code=1;
    string message=2;
    MaterialCategoryInfo data=3;
}